--- a/docs/css/rivet-add-on-boilerplate.css
+++ b/docs/css/rivet-add-on-boilerplate.css
@@ -1,5 +1,45 @@
-/*! rivet-uits - @version v1.1.0 */
-.rvt-add-on-boilerplate {
-  font-size: 1.625rem;
-  display: block;
+.rvt-typeset h1 {
+  font-size: 2.5rem;
+  line-height: 1.1;
+}
+
+.rvt-typeset h2 {
+  font-size: 1.75rem;
+}
+
+.rvt-typeset h3 {
+  font-size: 1.5rem;
+}
+
+.rvt-typeset h4,
+.rvt-typeset h5,
+.rvt-typeset h6 {
+  font-size: 1.25rem;
+}
+
+.rvt-typeset h1,
+.rvt-typeset h2,
+.rvt-typeset h3,
+.rvt-typeset h4,
+.rvt-typeset h5,
+.rvt-typeset h6 {
+  font-weight: 700;
+  margin-top: 2rem;
+}
+
+pre {
+  margin-top: 1.5rem;
+  border-radius: 0.25rem;
+  border: 1px solid #ddd;
+  padding: 1rem;
+}
+
+pre,
+code {
+  background-color: #f7f7f7;
+}
+
+code {
+  font-size: 1rem;
+  font-family: "Monaco", "Menolo", "Andale mono", monospace;
 }
