--- a/src/sass/rivet-add-on-boilerplate.scss
+++ b/src/sass/rivet-add-on-boilerplate.scss
@@ -1,7 +1,47 @@
 @import "../../node_modules/rivet-uits/sass/core/variables";
 
-.rvt-add-on-boilerplate {
-  // Using the rivet Sass variables imported above.
-  font-size: $ts-26;
-  display: block;
+.rvt-typeset h1 {
+  font-size: 2.5rem;
+  line-height: 1.1;
+}
+
+.rvt-typeset h2 {
+  font-size: 1.75rem;
+}
+
+.rvt-typeset h3 {
+  font-size: 1.5rem;
+}
+
+.rvt-typeset h4,
+.rvt-typeset h5,
+.rvt-typeset h6 {
+  font-size: 1.25rem;
+}
+
+.rvt-typeset h1,
+.rvt-typeset h2,
+.rvt-typeset h3,
+.rvt-typeset h4,
+.rvt-typeset h5,
+.rvt-typeset h6 {
+  font-weight: 700;
+  margin-top: 2rem;
+}
+
+pre {
+  margin-top: 1.5rem;
+  border-radius: 0.25rem;
+  border: 1px solid #ddd;
+  padding: 1rem;
+}
+
+pre,
+code {
+  background-color: #f7f7f7;
+}
+
+code {
+  font-size: 1rem;
+  font-family: "Monaco", "Menolo", "Andale mono", monospace;
 }
