--- a/src/sass/rivet-add-on-boilerplate.scss
+++ b/src/sass/rivet-add-on-boilerplate.scss
@@ -1,47 +1,12 @@
 @import "../../node_modules/rivet-uits/sass/core/variables";
+@import "./code-snippet-styling.scss";
 
-.rvt-typeset h1 {
-  font-size: 2.5rem;
-  line-height: 1.1;
-}
-
-.rvt-typeset h2 {
-  font-size: 1.75rem;
-}
-
-.rvt-typeset h3 {
-  font-size: 1.5rem;
-}
-
-.rvt-typeset h4,
-.rvt-typeset h5,
-.rvt-typeset h6 {
-  font-size: 1.25rem;
-}
-
-.rvt-typeset h1,
-.rvt-typeset h2,
-.rvt-typeset h3,
-.rvt-typeset h4,
-.rvt-typeset h5,
-.rvt-typeset h6 {
-  font-weight: 700;
-  margin-top: 2rem;
-}
-
-pre {
-  margin-top: 1.5rem;
-  border-radius: 0.25rem;
-  border: 1px solid #ddd;
-  padding: 1rem;
-}
-
-pre,
-code {
-  background-color: #f7f7f7;
-}
-
-code {
-  font-size: 1rem;
-  font-family: "Monaco", "Menolo", "Andale mono", monospace;
-}
+/**
+ * Rivet's Sass variables are available for use with the inclusion of the Sass
+ * Core Variables file above. You can see the available variables at the 
+ * following link: https://github.com/indiana-university/rivet-source/blob/develop/src/sass/core/_variables.scss
+ * 
+ * This file is meant to house solely Sass specific to the new component. All
+ * Sass intended to style the documentation should live in the 
+ * code-snippet-styling.scss file.
+ */
