--- a/src/sass/code-snippet-styling.scss
+++ b/src/sass/code-snippet-styling.scss
@@ -1,10 +1,11 @@
+@import "../../node_modules/rivet-uits/sass/core/variables";
 /**
  * The Sass in this file is provided for the purposes of styling documentation.
  * It is not intended to house styling specific to the component itself.
  */
 
 .rvt-typeset h1 {
-  font-size: $type-sizes-xl;
+  font-size: $ts-xl;
   line-height: 1.1;
 }
 
@@ -19,7 +20,7 @@
 .rvt-typeset h4,
 .rvt-typeset h5,
 .rvt-typeset h6 {
-  font-size: $type-sizes-sm;
+  font-size: $ts-sm;
 }
 
 .rvt-typeset h1,
@@ -45,6 +46,6 @@ code {
 }
 
 code {
-  font-size: $type-sizes-base;
+  font-size: $ts-base;
   font-family: "Monaco", "Menolo", "Andale mono", monospace;
 }
