Added code example styles from Rivet component docs

--- a/src/sass/code-snippet-styling.scss
+++ b/src/sass/code-snippet-styling.scss
@@ -49,3 +49,36 @@ code {
   font-size: $ts-base;
   font-family: "Monaco", "Menolo", "Andale mono", monospace;
 }
+
+.rvt-example {
+  margin-top: $md;
+
+  &__demo {
+      border: 1px solid $color-black--200;
+      border-top-right-radius: $xxs;
+      border-top-left-radius: $xxs;
+      padding: $sm;
+  }
+
+  &__code {
+      border: 1px solid $color-black--200;
+      border-top: none;
+      border-bottom-right-radius: $xxs;
+      border-bottom-left-radius: $xxs;
+      position: relative;
+
+      pre {
+          margin: 0;
+
+          code {
+              padding: $sm;
+          }
+      }
+  }
+
+  &__code--only {
+      border: 1px solid $color-black--200;
+      border-radius: $xxs;
+      position: relative;
+  }
+}
